--- a/index.html
+++ b/index.html
@@ -2,54 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <meta name="description" content="Index assignment">
+    <title>About Me</title>
+    <script src="https://use.fontawesome.com/e4163c2b14.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans|PT+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="styles/first-stylesheet.css">
   </head>
+  
   <body>
-    <div class="container">
-    <header>
-      <div class="page-header">
-    <h1>Hello, world!</h1>
-      </div>
-      </header>
+    <h1>The Landing Page or Main Page About Me</h1>
     <nav>
-    <ul class="nav nav-pills">
-      <li>link</li>
-      <li>link</li>
-      <li>link</li>
-    </ul>
-    </nav>
-    <ul class="list-group">
-    <li class="list-group-item">
-      <span class="badge">10</span>one</li>
-    <li class="list-group-item">two</li>
-    <li class="list-group-item">three</li>
-  </ul>
-      <div class="row">
-        <div class="col-sm-4">one</div>
-        <div class="col-sm-4">two</div>
-        <div class="col-sm-4">three</div>
+      <ul>
+        <li><a href="index.html">About Me</a></li>
+        <!--really want to make this a dropdown menu-->
+        <li><a href="splitting.html">Projects Links</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>  
+    </nav>  
+
+  <article class="middle">
+    <header>
+      <h2>What are my Hobbies</h2>
+      <p>How I spend my time:</p>
+    </header>
+    <p>I'm currently working in retail.  I'm a student at the University of Washington studying HTML and CSS. In my spare time I focus on cutting the grass and taking out the trash.  Outside of the trash and the grass I have 2 Italian Greyhounds and a polydactyl cat.  When my back isn't hurting me I use my 8lb maul to chop some wood.  I drive an 89' volvo 240 as my daily commuter.  Old volvos are the easiest cars to maintain.</p>
+  </article>
+    <section class="right">
+      <div id="change">
+    <img class="bottom" src="images/html5-logo.jpg" alt="HTML5 logo" style="width:350px;height:350px;"/>
+    <img class="top" src="images/css3-logo.jpg" alt="CSS3 logo" style="width:350px;height:350px;"/>
       </div>
-      <div class="row">
-        <div class="col-sm-4"><img src="images/basketball.png" width="100" height="100"></div>
-        <div class="col-sm-4"><img src="images/Baseball.svg.png" width="100" height="100"></div>
-        <div class="col-sm-4"><img src="images/football.jpg"width="100" height="100"></div>
-      </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-      
-    </div>
-  </body>
+    </section>
+  <div class="absolute">
+  <footer class="solid">
+    <p> Copyright Collin Kee Contact Info:
+    <a href="mailto:Collin@htmlcssstudent.com">
+        Collin@htmlcssstudent.com
+    </a>
+    <a href="https://www.facebook.com">
+      <i class="fa fa-facebook-official fa-lg" aria-hidden="true">
+      </i>
+    </a>
+    <a href="https://twitter.com/">
+      <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+    </a>
+    <a href="https://www.instagram.com/">
+      <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+    </a>
+    <a href="https://www.pinterest.com/">
+      <i class="fa fa-pinterest-square fa-lg" aria-hidden="true">
+      </i>
+    </a>
+    <a href="https://www.w3.org/html/logo/">
+      <i class="fa fa-html5 fa-lg" aria-hidden="true"></i>
+    </a>
+    <a href= "https://www.w3.org/Style/CSS/Overview.en.html">
+      <i class="fa fa-css3 fa-lg" aria-hidden="true"></i>
+    </a>  
+    </p>
+  </footer>
+  </div>
+  </body> 
 </html>
